hard-gists/844388/run.log
=== Docker Run Log for 844388 ===
Started at: Mi 29. Okt 17:48:18 CET 2025

[2025-10-29 17:48:18] START: Running container for 844388
[2025-10-29 17:48:18] SUCCESS: Container b09ce0ad72708da4b245f9db330eaa570192b6fc8edb9dff222df044c2b1a445 started for 844388
=== Container logs for 844388 ===
  File "/snippet.py", line 41
    except TypeError, exc:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 844388 ===
[2025-10-29 17:48:20] INFO: Container b09ce0ad72708da4b245f9db330eaa570192b6fc8edb9dff222df044c2b1a445 has stopped
